add: admin ktr request
